[WIP] Ajout page

--- a/src/assets/styles/scss/03-generic/_form.scss
+++ b/src/assets/styles/scss/03-generic/_form.scss
@@ -20,7 +20,7 @@ input[type='text'],
 input[type='password'],
 input[type='email'],
 input[type='date'] {
-    color: var(--color-text-primary-default);
+    //color: var(--color-text-primary-default);
     font-family: var(--font-body-common-font-family);
 }
 
