--- a/src/assets/styles/scss/04-components/_components.scss
+++ b/src/assets/styles/scss/04-components/_components.scss
@@ -1,7 +1,11 @@
 @import '_button';
 @import '_container';
+@import '_content';
+@import '_form-input';
+@import '_form';
 @import '_icons';
 @import '_header';
 @import '_list';
 @import '_logo';
 @import '_monitor';
+@import '_title';
