--- a/src/assets/styles/scss/04-components/_content.scss
+++ b/src/assets/styles/scss/04-components/_content.scss
@@ -3,4 +3,20 @@
 -------------------------------------------------------------------------------------------------------*/
 
 .c-content {
+    padding: 4rem 0 0 0;
+}
+
+// HP
+.c-content--hp {
+    padding: 6rem 0 0 0;
+    text-align: center;
+}
+
+// Page
+.c-content--page {
+}
+
+// Game
+.c-content--game {
+    text-align: center;
 }
