--- a/src/assets/styles/scss/04-components/_form.scss
+++ b/src/assets/styles/scss/04-components/_form.scss
@@ -4,6 +4,7 @@
 * Form basics
 */
 .c-form {
+    max-width: 60rem;
 }
 
 /*
@@ -20,12 +21,19 @@
 }
 
 /*
+* Field
+*/
+.c-field {
+    margin-bottom: 4rem;
+}
+
+/*
 * Label
 */
 .c-label {
     padding-bottom: 0.4rem;
     display: block;
-    font-size: 1.6rem;
+    font-size: 4rem;
     color: var(--text);
     font-weight: 400;
     line-height: 1.4;
