--- a/src/assets/styles/scss/04-components/_list.scss
+++ b/src/assets/styles/scss/04-components/_list.scss
@@ -2,13 +2,49 @@
   [component:list]
 -------------------------------------------------------------------------------------------------------*/
 
+/*
+* c-buttonList
+*/
 .c-buttonList {
     display: flex;
     flex-direction: column;
     gap: 0.8rem;
 }
+
 .c-buttonList__item {
     .c-button {
         width: 100%;
+    }
+}
+
+// Center
+.c-buttonList--center {
+    align-items: center;
+}
+
+/*
+* c-patientList
+*/
+
+.c-patientList {
+}
+.c-patientList__item {
+    margin-bottom: 4rem;
+}
+
+/*
+* c-localisationList
+*/
+
+.c-localisationList {
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+}
+.c-localisationList__item {
+    .c-button {
+        width: 15rem;
+        height: 15rem;
+        justify-content: center;
     }
 }
